# django-reusable-app

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.md  README.md  ROADMAP.md  cookiecutter.json  pyproject.toml  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.repo_name}}/: .gitignore  CONTRIBUTING.rst  README.rst  pyproject.toml  tox.ini
{{cookiecutter.repo_name}}/.circleci/: config.yml
{{cookiecutter.repo_name}}/docs/: installation.rst  usage.rst
{{cookiecutter.repo_name}}/example/: README.md  pyproject.toml
{{cookiecutter.repo_name}}/example/example/: settings.py
{{cookiecutter.repo_name}}/tests/: settings.py  test_models.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/: urls.py  views.py
