[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{cookiecutter.full_name}} <cookiecutter.email>"]
license = "{{ cookiecutter.open_source_license }}"
readme = "README.rst"
homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.repo_name}}"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.repo_name}}"
documentation = "https://{{cookiecutter.repo_name}}.readthedocs.io"
keywords= "{{ cookiecutter.repo_name }}"

[tool.poetry.dependencies]
python = "*"
django = "*"

[tool.poetry.dev-dependencies]
coverage = "*"
tox = "*"
codecov = "*"
sphinx = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
