[tool.poetry]
name = "example"
version = "0.1.0"
description = "An example project with your {{ cookiecutter.project_name }} app."
authors = ["{{cookiecutter.full_name}} <{{ cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "*"
django = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
